--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.3"
     }
 }
