--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.39",
-        "tailwindcss": "^3.4.4",
+        "tailwindcss": "^3.4.17",
         "vite": "^5.0"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.0",
         "chart.js": "^4.4.3",
         "swagger-ui-dist": "^5.18.2"
     }
